--- a/brb-anim.html
+++ b/brb-anim.html
@@ -5,16 +5,15 @@
     <title>be right back</title>
     <script src="brb.js" type="text/javascript"></script>
     <style>
-	
-	 *
+	*
 	 {
-		image-rendering: optimizeSpeed;             /* STOP SMOOTHING, GIVE ME SPEED  */
-		image-rendering: -moz-crisp-edges;          /* Firefox                        */
-		image-rendering: -o-crisp-edges;            /* Opera                          */
-		image-rendering: -webkit-optimize-contrast; /* Chrome (and eventually Safari) */
-		image-rendering: pixelated; /* Chrome */
-		image-rendering: optimize-contrast;         /* CSS3 Proposed                  */
-		-ms-interpolation-mode: nearest-neighbor;   /* IE8+                           */
+		image-rendering:optimizeSpeed;
+		image-rendering:-moz-crisp-edges;
+		image-rendering:-o-crisp-edges;
+		image-rendering:-webkit-optimize-contrast;
+		image-rendering:pixelated;
+		image-rendering:optimize-contrast;
+		-ms-interpolation-mode:nearest-neighbor;
 	  }
       html, body {
 		background:transparent;overflow:hidden;
@@ -27,8 +26,8 @@
 		outline:0;
 		padding:0;
 		margin:0;
-		width:1280px;
-		height:720px;
+		width:640px;
+		height:360px;
 	  }
 	 
 	  body{margin:0;}
